--- a/css/styles.css
+++ b/css/styles.css
@@ -412,7 +412,7 @@ footer a:hover {
 }
 
 
-@media (max-width: 768px) {
+@media (max-width: 820px) {
     .container-nav {
         display: flex;
         flex-direction: column;
@@ -476,7 +476,7 @@ footer a:hover {
         margin-top: 0.5rem;
         width: 100%;
     }
-    .image-not-visible-on-tablet-and-below {
+    .image-not-visible-on-tablet {
         display: none;
     }
     #punktensSpel {
@@ -502,6 +502,7 @@ footer a:hover {
         padding: 1rem 0;
     }
 
+
     footer {
         flex-direction: column;
         padding: 50px 50px 20px 50px;
@@ -519,6 +520,8 @@ footer a:hover {
         margin: 0 0;
     }
 }
+
+
 
 @media (max-width: 426px) {
     h3 {
@@ -566,6 +569,10 @@ footer a:hover {
     }
     #punktensSpel {
         width: 100%;
+    }
+
+    .image-not-visible-on-mobile {
+        display: none;
     }
 
 
